# fishfinder

./: Cargo.toml  LICENSE
fishfinder/: Cargo.toml
fishfinder-nn/: Cargo.toml  README.md  fishgen.pyi  main.py
fishfinder-nn/src/: main.rs
fishfinder/src/: main.rs
fishgen/: Cargo.toml
fishgen-py/: Cargo.toml
fishgen-py/src/: lib.rs
fishgen/src/: fish.png~  lib.rs
fishviewer/: Cargo.toml
fishviewer/src/: display.rs  main.rs
