[package]
name = "fishfinder-nn"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
fishgen = { path = "../fishgen"}
dfdx = { version = "0.9.0", features = ["nightly"] }
rand = "0.8.5"
image = "0.24.3"
